<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:textColor="#CC0000"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:weightSum="6">
    <Button
        android:id="@+id/btn_text1"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_text1"
        android:layout_weight="1"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/btn_text2"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text2"
        android:layout_weight="1"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/btn_text3"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_text3"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/btn_text4"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_text4"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/btn_text5"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/btn_text5"
        android:textSize="14dp"/>
    <Button
        android:id="@+id/btn_thoat"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="@string/btn_thoat"
        android:textSize="14dp"/>
</LinearLayout>
   <!--- <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> -->

</LinearLayout>